--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/config/cards-prod.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/config/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank cards related production APIs "
+  message: "Welcome to EazyBank cards related production1 APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
