Spring Cloud Bus and Spring Cloud Config Monitor changes with testing

--- a/section6/v2-spring-cloud-config/accounts/pom.xml
+++ b/section6/v2-spring-cloud-config/accounts/pom.xml
@@ -55,6 +55,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+<!--			We are trying to setup both SPring cloud bus and message queue with rabbitQ integration-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
