--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -17,6 +17,18 @@ spring:
           clone-on-start: true
           force-pull: true
 
+    rabbitmq:
+      host: "localhost"
+      port: 5672
+      username: "guest"
+      password: "guest"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 encrypt:
   key: "12345678901234567890123456789012"
 
