--- a/section6/v2-spring-cloud-config/configserver/pom.xml
+++ b/section6/v2-spring-cloud-config/configserver/pom.xml
@@ -68,6 +68,16 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.2</version>
+				<configuration>
+					<to>
+						<image>shubhakshi22/${project.artifactId}:s6</image>
+					</to>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
