--- a/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
+++ b/section6/v2-spring-cloud-config/configserver/src/main/resources/application.yml
@@ -28,6 +28,15 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
 
 encrypt:
   key: "12345678901234567890123456789012"
